# mathbox

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md  package.xml
cmake/: config.cmake.in  mathbox-config.cmake.in
include/mathbox/: covariance.hpp  decompose.hpp  geometry.hpp  integrator.hpp  lerp.hpp  matrix_diagnostics.hpp  matrix_operations.hpp  matrix_properties.hpp  nsphere.hpp  statistics.hpp  stiffness.hpp  time.hpp  traits.hpp  transform_components.hpp  transform_manager.hpp  types.hpp  vector_operations.hpp
include/mathbox/impl/: covariance.hpp  decompose.hpp  geometry.hpp  integrator.hpp  lerp.hpp  matrix_diagnostics.hpp  matrix_operations.hpp  matrix_properties.hpp  normal.hpp  nsphere.hpp  statistics.hpp  stiffness.hpp  time.hpp  transform_components.hpp  transform_manager.hpp  vector_operations.hpp
mathbox/: CMakeLists.txt  Doxyfile.in  README.md  package.xml
mathbox/cmake/: config.cmake.in  setup.cmake
mathbox/include/mathbox/: covariance.hpp  geometry.hpp  integrator.hpp  lerp.hpp  matrix_operations.hpp  normal.hpp  stiffness.hpp  time.hpp  traits.hpp  types.hpp
mathbox/include/mathbox/impl/: covariance.hpp  geometry.hpp  integrator.hpp  lerp.hpp  matrix_operations.hpp  matrix_properties.hpp  normal.hpp  stiffness.hpp  time.hpp  traits.hpp  vector_operations.hpp
mathbox/test/: CMakeLists.txt
mathbox/test/src/: covariance.cpp  integrator.cpp  nsphere.cpp
mathbox_catkin/: CMakeLists.txt  package.xml
src/: covariance.cpp  decompose.cpp  geometry.cpp  lerp.cpp  matrix_operations.cpp  normal.cpp  nsphere.cpp  statistics.cpp  stiffness.cpp  time.cpp  transform_components.cpp  transform_manager.cpp  vector_operations.cpp
test/: CMakeLists.txt
test/src/: decompose.cpp  geometry.cpp  integrator.cpp  matrix_operations.cpp  normal.cpp  nsphere.cpp  stiffness.cpp  traits.cpp  vector_operations.cpp
