<?xml version="1.0"?>
<package format="2">
    <name>mathbox</name>
    <version>0.6.3</version>
    <description>General purpose math package.</description>
    <maintainer email="william.talbot97@gmail.com">William Talbot</maintainer>
    <license>BSD-3_Clause</license>
    <url type="repository">https://github.com/willat343/mathbox</url>
    <author email="william.talbot97@gmail.com">William Talbot</author>

    <buildtool_depend>cmake</buildtool_depend>

    <build_export_depend>eigen</build_export_depend>
    <test_depend>eigen</test_depend>
    <depend>cppbox</depend>

    <export>
        <build_type>cmake</build_type>
    </export>
</package>
