<?xml version="1.0"?>
<package format="2">
    <name>mathbox_catkin</name>
    <version>1.1.0</version>
    <description>mathbox_catkin</description>

    <maintainer email="william.talbot97@gmail.com">William Talbot</maintainer>
    <license>BSD-3_Clause</license>
    <author email="william.talbot97@gmail.com">William Talbot</author>

    <buildtool_depend>catkin</buildtool_depend>
</package>
